src/test/ui/issues/issue-17431-1.stderr
error[E0072]: recursive type `Foo` has infinite size
  --> $DIR/issue-17431-1.rs:1:1
   |
LL | struct Foo { foo: Option<Option<Foo>> }
   | ^^^^^^^^^^   ------------------------ recursive without indirection
   | |
   | recursive type has infinite size
   |
   = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `Foo` representable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
